more back-compatibility

--- a/phase_1a_single_site_almond/05_validation.Rmd
+++ b/phase_1a_single_site_almond/05_validation.Rmd
@@ -14,6 +14,7 @@ We consider here the 224 ("reduced N") and 309 ("intensive N") treatments, simul
 
 ```{R setup}
 library(tidyverse)
+library(lubridate)
 
 set.seed(455384)
 theme_set(theme_bw())
